--- a/lupa-main/LupaSearchWinCtrl.xib
+++ b/lupa-main/LupaSearchWinCtrl.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8191" systemVersion="15B17c" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8191"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9531"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="LupaSearchWinCtrl" customModule="lupa" customModuleProvider="target">
@@ -26,7 +26,6 @@
                 <subviews>
                     <searchField wantsLayer="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="mzq-eI-59F" customClass="LupaSearchField" customModule="lupa" customModuleProvider="target">
                         <rect key="frame" x="20" y="187" width="252" height="22"/>
-                        <animations/>
                         <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" usesSingleLineMode="YES" bezelStyle="round" id="dCh-xu-EgJ">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -46,7 +45,6 @@
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="none" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="51" rowSizeStyle="automatic" viewBased="YES" id="LMX-1P-cwF">
                                     <rect key="frame" x="0.0" y="0.0" width="250" height="0.0"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <animations/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" red="0.92941182850000004" green="0.92941182850000004" blue="0.92941182850000004" alpha="1" colorSpace="deviceRGB"/>
                                     <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
@@ -73,7 +71,6 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="48" id="wls-d1-gqd"/>
                                                             </constraints>
-                                                            <animations/>
                                                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="LupaSinImagen" id="CS7-DI-ZwC"/>
                                                             <connections>
                                                                 <binding destination="Lre-0D-xUh" name="valueURL" keyPath="objectValue.picturl" id="rwe-Zl-Wwu"/>
@@ -81,7 +78,6 @@
                                                         </imageView>
                                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="wsZ-3O-CjI">
                                                             <rect key="frame" x="57" y="34" width="35" height="14"/>
-                                                            <animations/>
                                                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Name" id="UA3-Ow-p1S">
                                                                 <font key="font" metaFont="smallSystem"/>
                                                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -93,7 +89,6 @@
                                                         </textField>
                                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="F3t-c0-u4b">
                                                             <rect key="frame" x="57" y="18" width="21" height="14"/>
-                                                            <animations/>
                                                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="uid" id="bJh-hf-vgI">
                                                                 <font key="font" metaFont="smallSystem"/>
                                                                 <color key="textColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
@@ -105,7 +100,6 @@
                                                         </textField>
                                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="SXG-dN-Kzo">
                                                             <rect key="frame" x="82" y="18" width="39" height="14"/>
-                                                            <animations/>
                                                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="mobile" id="1D7-qv-9pe">
                                                                 <font key="font" metaFont="smallSystem"/>
                                                                 <color key="textColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
@@ -117,7 +111,6 @@
                                                         </textField>
                                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fOv-cH-gfP">
                                                             <rect key="frame" x="57" y="3" width="21" height="11"/>
-                                                            <animations/>
                                                             <textFieldCell key="cell" controlSize="mini" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="title" id="RyS-RP-vTe">
                                                                 <font key="font" metaFont="miniSystem"/>
                                                                 <color key="textColor" name="alternateSelectedControlColor" catalog="System" colorSpace="catalog"/>
@@ -143,7 +136,6 @@
                                                         <constraint firstItem="fOv-cH-gfP" firstAttribute="leading" secondItem="F3t-c0-u4b" secondAttribute="leading" id="jvk-Kk-z7p"/>
                                                         <constraint firstItem="F3t-c0-u4b" firstAttribute="top" secondItem="wsZ-3O-CjI" secondAttribute="bottom" constant="2" id="tGs-Im-hJP"/>
                                                     </constraints>
-                                                    <animations/>
                                                 </tableCellView>
                                             </prototypeCellViews>
                                         </tableColumn>
@@ -154,24 +146,19 @@
                                     </connections>
                                 </tableView>
                             </subviews>
-                            <animations/>
                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </clipView>
-                        <animations/>
                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="dc7-2f-B7I">
                             <rect key="frame" x="1" y="119" width="223" height="15"/>
                             <autoresizingMask key="autoresizingMask"/>
-                            <animations/>
                         </scroller>
                         <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="3EU-dd-Krr">
                             <rect key="frame" x="224" y="17" width="15" height="102"/>
                             <autoresizingMask key="autoresizingMask"/>
-                            <animations/>
                         </scroller>
                     </scrollView>
                     <progressIndicator hidden="YES" wantsLayer="YES" horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="TqW-HL-zol">
                         <rect key="frame" x="220" y="190" width="16" height="16"/>
-                        <animations/>
                     </progressIndicator>
                 </subviews>
                 <constraints>
@@ -185,12 +172,11 @@
                     <constraint firstItem="QSB-3v-dMQ" firstAttribute="trailing" secondItem="mzq-eI-59F" secondAttribute="trailing" id="myp-Qp-0at"/>
                     <constraint firstAttribute="trailing" secondItem="mzq-eI-59F" secondAttribute="trailing" constant="20" symbolic="YES" id="xVs-b7-PxX"/>
                 </constraints>
-                <animations/>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
             </connections>
-            <point key="canvasLocation" x="-450" y="-296"/>
+            <point key="canvasLocation" x="-711" y="-483"/>
         </window>
         <arrayController automaticallyPreparesContent="YES" automaticallyRearrangesObjects="YES" id="CaR-wG-5SX" userLabel="someUsersController">
             <connections>
